# agentic-skill-registry

./: .antigravity-install-manifest.json  .gitignore  DIRECTORY_TREE.md  README.md  generate_full_ascii_tree.py  librarian-index.json  pyproject.toml  sync_flat_skills.py  update_skills.py  verify_exact_skills.py
.github/workflows/: ci.yml
docs/: architecture.md  getting-started.md  migration-from-agentic-library.md  source-intake.md  trust-model.md
docs/evaluations/: 2026-07-16-librarian-scenarios.md  2026-07-20-adversarial-qa-report.md
pipeline/skill_registry/: __init__.py  cli.py  filesystem.py  identity.py  intake.py  integration.py  models.py  runtime.py  validator.py
registry/: aliases.json  exceptions.json  librarian-integration.json  librarian-integration.lock.json  quarantine.json  risk-overrides.json  safety-signals.json  skills.json  sources.lock.json  upstream-review.json
registry/migration/: legacy-manifest.json
registry/source-reviews/: sickn33-agentic-awesome-skills-6f14c22029b4c0477a0e0bd59073f446a72d7033.json  sickn33-agentic-awesome-skills-98c140e03781e20c7f769532af975a7249341f40.json  sickn33-agentic-awesome-skills-d5814bb4e7824a0991af40db4ecdabdfa9ab8d2d.json
scripts/: sync_flat_skills.py  test_pipeline.py  update_skills.py
skills/skill-librarian/: SKILL.md
tests/contracts/: test_librarian_skill.py  test_validator.py
tests/integration/: test_intake_cli.py  test_runtime_cli.py  test_search_quality.py
tests/unit/: test_intake.py  (+4 more)
tools/: bootstrap_registry.py  generate_librarian_integration_lock.py  migrate_v1.py  verify_migration.py
(+7 files in other folders)
